profilelist1exp/unpackaged/objects/ST_Incident__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <defaultValue>&quot;Create&quot;</defaultValue>
        <label>Action</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assingned_Support_Company__c</fullName>
        <defaultValue>&quot;DELL&quot;</defaultValue>
        <label>Assingned_Support_Company</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_ID__c</fullName>
        <label>Corporate ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <defaultValue>&quot;4-Minor/Localized&quot;</defaultValue>
        <label>Impact</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Number__c</fullName>
        <label>Incident Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Status__c</fullName>
        <defaultValue>&quot;NEW&quot;</defaultValue>
        <label>Incident_Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Categorization_Tier_1__c</fullName>
        <label>Product_Categorization_Tier_1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categorization_Tier_2__c</fullName>
        <label>Product_Categorization_Tier_2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categorization_Tier_3__c</fullName>
        <label>Product_Categorization_Tier_3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionId__c</fullName>
        <label>QuestionId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remedy_submission_Status__c</fullName>
        <description>0 - New, 
1 - Processed By DataPower
2 - Ticket Created 
3 - Error</description>
        <label>Remedy_submission_Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Source__c</fullName>
        <defaultValue>&quot;CHAT&quot;</defaultValue>
        <label>Reported_Source</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Categorization_Tier_1__c</fullName>
        <label>Service_Categorization_Tier_1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Categorization_Tier_2__c</fullName>
        <label>Service_Categorization_Tier_2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Categorization_Tier_3__c</fullName>
        <label>Service_Categorization_Tier_3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <defaultValue>&quot;USER SERVICE REQUEST&quot;</defaultValue>
        <label>Service_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <defaultValue>&quot;4-LOW&quot;</defaultValue>
        <label>Urgency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Info_Notes__c</fullName>
        <description>a. Contact Number b. Site C. Work Hours (from &amp; to) d. Computer Name</description>
        <label>Work_Info_Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ST_Incident</label>
    <nameField>
        <label>Simple Ticket Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ST_Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>